fix(discord): публиковать подборку текстом с цитатами описаний